// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Links Inner component with a large number of needs matches snapshot and has expected path 1`] = `
<div
  class="gl-flex gl-relative"
  totalgroups="10"
>
  <svg
    class="gl-absolute gl-pointer-events-none"
    height="445px"
    id="reference-0"
    viewBox="0,0,1019,445"
    width="1019px"
  >
    <path
      class="gl-duration-slow gl-ease-ease gl-fill-transparent gl-stroke-gray-200"
      d="M212,128C62,128,62,148,112,148"
      stroke-width="2"
    />
    <path
      class="gl-duration-slow gl-ease-ease gl-fill-transparent gl-stroke-gray-200"
      d="M212,128C72,128,72,158,122,158"
      stroke-width="2"
    />
    <path
      class="gl-duration-slow gl-ease-ease gl-fill-transparent gl-stroke-gray-200"
      d="M232,148C82,148,82,168,132,168"
      stroke-width="2"
    />
    <path
      class="gl-duration-slow gl-ease-ease gl-fill-transparent gl-stroke-gray-200"
      d="M222,138C92,138,92,178,142,178"
      stroke-width="2"
    />
    <path
      class="gl-duration-slow gl-ease-ease gl-fill-transparent gl-stroke-gray-200"
      d="M242,158C102,158,102,188,152,188"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`Links Inner component with a parallel need matches snapshot and has expected path 1`] = `
<div
  class="gl-flex gl-relative"
  totalgroups="10"
>
  <svg
    class="gl-absolute gl-pointer-events-none"
    height="445px"
    id="reference-0"
    viewBox="0,0,1019,445"
    width="1019px"
  >
    <path
      class="gl-duration-slow gl-ease-ease gl-fill-transparent gl-stroke-gray-200"
      d="M222,138C72,138,72,158,122,158"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`Links Inner component with one need matches snapshot and has expected path 1`] = `
<div
  class="gl-flex gl-relative"
  totalgroups="10"
>
  <svg
    class="gl-absolute gl-pointer-events-none"
    height="445px"
    id="reference-0"
    viewBox="0,0,1019,445"
    width="1019px"
  >
    <path
      class="gl-duration-slow gl-ease-ease gl-fill-transparent gl-stroke-gray-200"
      d="M212,128C62,128,62,148,112,148"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`Links Inner component with same stage needs matches snapshot and has expected path 1`] = `
<div
  class="gl-flex gl-relative"
  totalgroups="10"
>
  <svg
    class="gl-absolute gl-pointer-events-none"
    height="445px"
    id="reference-0"
    viewBox="0,0,1019,445"
    width="1019px"
  >
    <path
      class="gl-duration-slow gl-ease-ease gl-fill-transparent gl-stroke-gray-200"
      d="M192,108C42,108,42,128,92,128"
      stroke-width="2"
    />
    <path
      class="gl-duration-slow gl-ease-ease gl-fill-transparent gl-stroke-gray-200"
      d="M212,128C52,128,52,138,102,138"
      stroke-width="2"
    />
  </svg>
</div>
`;
